# machinet

./: CHANGELOG.txt  README  dovecot.fix  enable_kolab  install.sh  machinet.sh  openldap.fix  postfix.fix  webservices.fix
dovecot/: README  dovecot.conf  (+1 more)
webservices/: CMakeLists.txt  database.sql  httpd-machinet.conf  kolab-20210107.sql  kolab-3.3.sql  kolab16.sql  roundcubemail
webservices/chwala/: README.md  composer.json
webservices/chwala/config/: config.inc.php  config.inc.php.dist  db.inc.php  main.inc.php
webservices/chwala/lib/: file_api.php  file_api_core.php  file_document.php  file_utils.php  file_wopi.php  init.php
webservices/chwala/lib/api/: folder_types.php
webservices/chwala/lib/ext/: Roundcube
webservices/chwala/lib/viewers/: doc.php  image.php  media.php  odf.php  pdf.php
webservices/kolab-syncroton-2.2.5/: .htaccess  index.php
webservices/kolab-syncroton-2.2.5/config/: config.inc.php  main.inc.php.dist
webservices/kolab-syncroton-2.2.5/docs/: kolab-syncroton.conf  kolab-syncroton.logrotate
webservices/kolab-syncroton-2.2.5/docs/SQL/: mysql.initial.sql
webservices/kolab-syncroton-2.2.5/lib/: init.php  kolab_sync.php  kolab_sync_backend.php  kolab_sync_backend_common.php  kolab_sync_backend_content.php  kolab_sync_backend_device.php  kolab_sync_backend_folder.php  kolab_sync_backend_policy.php  kolab_sync_backend_state.php  kolab_sync_body_converter.php  kolab_sync_data.php  kolab_sync_data_calendar.php  kolab_sync_data_contacts.php  kolab_sync_data_email.php  kolab_sync_data_gal.php  kolab_sync_data_tasks.php  kolab_sync_db.php  kolab_sync_logger.php  kolab_sync_message.php  kolab_sync_plugin_api.php  kolab_sync_timezone_converter.php  kolab_sync_transaction_manager.php
webservices/kolab-syncroton-2.2.5/lib/ext/: rtf.php
webservices/kolab-syncroton-2.2.5/lib/plugins/: kolab_auth  kolab_folders  libkolab
webservices/kolab-syncroton-2.2.5/tests/: body_converter.php  bootstrap.php  data.php  data_tasks.php  message.php  phpunit.xml  timezone_converter.php
webservices/kolab-syncroton-2.2.5/tests/src/: mail.alternative  mail.alternative2  mail.mixed  mail.plain  mail.plain.append  mail.plain.mixed  mail.recode1  mail.recode1.out  mail.recode2  mail.recode2.out  mail.recode3.out  mail.recode4  mail.recode4.out
webservices/mcConsolette/code/: config.php  functions.php
webservices/mcConsolette/public_html/: .htaccess  index.php  list.php
webservices/mcConsolette/public_html/css/: common.css
webservices/mcConsolette/templates/: footer.tpl  header.tpl  index.tpl
webservices/mcConsolette/templates/domains/: added.tpl  delete.tpl  detail.tpl  list.tpl  new.tpl  select.tpl  selected.tpl
webservices/mcConsolette/templates/groups/: added.tpl  change.tpl  changed.tpl  changepass.tpl  delete.tpl  detail.tpl  list.tpl  new.tpl  userswindow.tpl
webservices/mcConsolette/templates/login/: welcome.tpl
webservices/mcConsolette/templates/users/: added.tpl  change.tpl  changed.tpl  changepass.tpl  delete.tpl  detail.tpl  disable.tpl  list.tpl  new.tpl
webservices/rc-config/: install.sh  kolab_activesync-config.inc.php  kolab_addressbook-config.inc.php  kolab_auth.cfg  kolab_chat-config.inc.php  ldap_authentication-config.inc.php  libkolab.cfg
webservices/rc-config/calendar/: config.inc.php
webservices/rc-config/kolab_addressbook/: config.inc.php
webservices/rc-config/kolab_folders/: config.inc.php
webservices/rc-config/libkolab/: config.inc.php
webservices/rc-config/password/: config.inc.php
webservices/roundcubemail-1.0.2/: .htaccess
webservices/roundcubemail-1.0.2/config/: config.inc.php
webservices/roundcubemail-1.3.3/: logs
webservices/roundcubemail-1.3.3/config/: config.inc.php
(+514 files in other folders)
